--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,6 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.0.2
 mpmath==1.3.0
-narwhals==1.9.2
 nbclient==0.10.0
 nbconvert==7.16.4
 nbdime==4.0.2
@@ -74,7 +73,6 @@ networkx==3.2.1
 notebook_shim==0.2.4
 numpy==2.1.1
 outcome==1.3.0.post0
-overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
 pandocfilters==1.5.1
@@ -126,7 +124,9 @@ terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.3.0
 toml==0.10.2
-torch==2.4.1+cpu
+torch==2.4.1
+torchaudio==2.4.1
+torchvision==0.19.1
 tornado==6.4.1
 traitlets==5.14.3
 trio==0.26.2
